--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 # Playwright
 node_modules/
 /test-results/
@@ -8,5 +7,9 @@ node_modules/
 /playwright/.auth/
 #Allure
 /allure-report
+/.allure
 /allure-results
 /report_tests.xml
+/.github
+/allurerc.mjs
+/.env
