--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -25,15 +25,15 @@ jobs:
       #   env:
       #     STEP: ${{vars.STEP}}
       #     SECRET: ${{secrets.MYSUPERSECRET}}
-      # - name: Запускаем генерацию allure в одном файле
-      #   run: npm run allureFile
-      #   if: always()
-      #   continue-on-error: true
-      # # сохраняем результаты
-      # - uses: actions/upload-artifact@v4
-      #   if: ${{ !cancelled() }}
-      #   continue-on-error: true
-      #   with:
-      #     name: allure-report
-      #     path: allure-report
-      #     retention-days: 30
+      - name: Запускаем генерацию allure в одном файле
+        run: npm run allureFile
+        if: always()
+        continue-on-error: true
+      # сохраняем результаты
+      - uses: actions/upload-artifact@v4
+        if: ${{ !cancelled() }}
+        continue-on-error: true
+        with:
+          name: allure-report
+          path: allure-report
+          retention-days: 30
